Edit manifest.json file

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Sounds-of-the-Times-Studios",
+  "name": "Sounds of the Times Studios",
   "short_name": "SOT Studios",
   "description": "Leipzig's premier recording studio for professional audio production",
   "start_url": "/",
