Change root in manifest.json file

--- a/manifest.json
+++ b/manifest.json
@@ -62,7 +62,7 @@
   "related_applications": [
     {
       "platform": "webapp",
-      "url": "https://soundsofthetimes.com/manifest.json"
+      "url": "https://github.com/JabengJab/PP1-Sounds-of-the-Times-Studios-Andrew-Djaba/blob/main/manifest.json"
     }
   ],
   "prefer_related_applications": false,
